Fixed mode not being passed correctly, made logo in EditingApp clickable

--- a/client/src/style/EditingApp.css
+++ b/client/src/style/EditingApp.css
@@ -24,6 +24,11 @@ html, body {
     width: 120px;
     float: left;
     overflow: auto;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 .EA-head-logo-image {
